<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/navigation_prospects"
            android:icon="@drawable/ic_extension_black_24dp"
            android:title="@string/prospects" />

    <item
            android:id="@+id/navigation_contacts"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/contacts" />

    <item
            android:id="@+id/navigation_deals"
            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
            android:title="@string/deals" />

    <item
            android:id="@+id/navigation_proposals"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/proposals" />
</menu>