<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
    >

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="16dp"
                  android:layout_marginBottom="16dp"
                  android:id="@+id/proposal_name"
                  android:text="@string/pit_stop_auto_google_feeds"
                  android:textColor="@color/black_name"
                  android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/type"
                  android:layout_marginStart="8dp"
                  android:id="@+id/pro_type"
                  android:textColor="@color/black_name"
                  android:alpha="0.7"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/proposal_name"

        />


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/discovery"
                  android:id="@+id/pro_dis"
                  android:layout_marginEnd="8dp"
                  android:textColor="@color/black_name"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/proposal_name"

        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/billing_type"
                  android:textColor="@color/black_name"
                  android:alpha="0.7"

                  android:layout_marginStart="8dp"
                  android:id="@+id/pro_bill_type"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/pro_type"

        />


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/fixed_bid"
                  android:textColor="@color/black_name"
                  android:layout_marginEnd="8dp"
                  android:id="@+id/pro_fixed_bid"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/pro_type"

        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/price_type"
                  android:textColor="@color/black_name"
                  android:alpha="0.7"
                  android:layout_marginStart="8dp"
                  android:layout_marginBottom="8dp"
                  android:id="@+id/pro_price_type"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/pro_bill_type"

        />


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/discounted"
                  android:textColor="@color/black_name"
                  android:layout_marginEnd="8dp"
                  android:layout_marginBottom="8dp"
                  android:id="@+id/pro_discount"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/pro_bill_type"

        />


        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/item_desc"
                  android:textColor="@color/black_name"
                  android:id="@+id/pro_desc"
                  android:layout_margin="8dp"
                  app:layout_constraintTop_toBottomOf="@+id/pro_price_type"

        />

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/total_value"
                  android:layout_margin="16dp"
                  app:layout_constraintTop_toBottomOf="@+id/pro_desc"
                  android:id="@+id/total_val_txt"
                  android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginStart="8dp"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/_45_654_00"
                  android:id="@+id/total_val"
                  android:visibility="gone"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/pro_desc"
                  app:layout_constraintLeft_toRightOf="@+id/total_val_txt"
                  android:layout_marginStart="8dp"/>


        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@color/pop_head_txt"
                  android:layout_margin="16dp"
                  android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                  app:layout_constraintTop_toBottomOf="@+id/total_val_txt"
                  android:text="@string/proposal_items"
                  android:id="@+id/pro_item_id"

        />


        <androidx.recyclerview.widget.RecyclerView
                android:layout_margin="10dp"
                android:id="@+id/pro_item_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/pro_item_id"

        />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>