<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textColor="@color/black_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            card_view:layout_constraintStart_toEndOf="@id/img_profile"
            android:text="@string/april_walker"
    />

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:srcCompat="@drawable/ic_account_balance_black_24dp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/designation"
            android:text="@string/it_director"
            android:textColor="@color/proposal_amount"
            card_view:layout_constraintStart_toEndOf="@id/img_profile"
            card_view:layout_constraintTop_toBottomOf="@id/name"
    />

</androidx.constraintlayout.widget.ConstraintLayout>