<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
    >
        <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_card"
                card_view:cardElevation="1dp"
                card_view:cardCornerRadius="4dp"
        >

            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/img_profile"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/todo"
                    card_view:srcCompat="@drawable/download"
            />
        </androidx.cardview.widget.CardView>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pros_name"
                android:textColor="@android:color/black"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                card_view:layout_constraintStart_toEndOf="@id/img_card"
                android:layout_marginStart="10dp"
                android:text="@string/april_walker"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pros_position"
                android:textColor="@android:color/black"
                android:alpha="0.5"
                android:text="@string/eligibility_consultants_inc"
                card_view:layout_constraintStart_toEndOf="@id/img_card"
                card_view:layout_constraintTop_toBottomOf="@id/pros_name"
                android:layout_marginStart="10dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>