<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

    >
        <ImageView
                android:id="@+id/img_header_bg"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                android:alpha="0.8"
                android:src="@drawable/download"
                android:contentDescription="@string/todo"/>

        <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="110dp"
                android:layout_marginStart="10dp"
                android:id="@+id/img_id"
                app:cardCornerRadius="10dp"
                app:cardElevation="6dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"        >
            <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/img_profile"
                    android:scaleType="centerCrop"
                    android:src="@drawable/download"
                    android:contentDescription="@string/todo"
                    />
        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_id"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:textColor="@android:color/black"
                android:text="@string/aiyappa"
        />

        <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:alpha="0.7"
                android:textColor="@color/black_name"
                app:layout_constraintTop_toBottomOf="@+id/name"
                android:text="@string/aiyappa_td_aezion_com"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
